[package]
name = "metacat"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.0.2"
google-drive3 = "4.0.4+20220225"
lazy_static = "1.4.0"
poise = "0.5.2"
serde-json-utils = "0.2.1"
serde_json = "1.0.91"
tokio = { version = "1.4.0", features = ["rt","macros","rt-multi-thread"] }
serde_derive = "1.0.152"
serde = "1.0.152"
